FreeST/test/Programs/InvalidTests/tNotInScope/tNotInScope.fst

main : Int
main = 2

type T = S
